--- a/source/pages/my/my.wxml
+++ b/source/pages/my/my.wxml
@@ -113,19 +113,19 @@
       <view class="height-40"></view>
       <view class="flex-row flex-center">
         <view class="flex-1 flex-row flex-column" bindtap="notdata">
-          <image src="{{uploadpath}}resource/{{res.jifenshangcheng}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.jifenshangcheng}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">积分商城</view>
         </view>
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/addresslist/addresslist">
-          <image src="{{uploadpath}}resource/{{res.dizhiguanli}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.dizhiguanli}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">地址管理</view>
         </view>
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/myactivity/myactivity?type=A">
-          <image src="{{uploadpath}}resource/{{res.activity}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.activity}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">我的活动</view>
         </view>
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/mycoupon/mycoupon?type=A">
-          <image src="{{uploadpath}}resource/{{res.youhuiquan}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.youhuiquan}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">优惠券</view>
         </view>
 
@@ -133,19 +133,19 @@
       <view class="height-60"></view>
       <view class="flex-row flex-center">
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/mypingjia/mypingjia">
-          <image src="{{uploadpath}}resource/{{res.wodepinjia}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.wodepinjia}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">我的评价</view>
         </view>
         <button style="border: 0;padding: 0;margin: 0;" class="flex-1 flex-row flex-column" bindtap="sharefenxiao" open-type="share" plain="true">
-          <image src="{{uploadpath}}resource/{{res.fenxiao}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.fenxiao}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20" style="line-height: 30rpx;">转发分享</view>
         </button>
         <view class="flex-1 flex-row flex-column" bindtap="phonecall" bindtap="navigateto" id="/pages/myshouyi/myshouyi">
-          <image src="{{uploadpath}}resource/{{res.wodeshouyi}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.wodeshouyi}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">我的收益</view>
         </view>
         <view class="flex-1 flex-row flex-column" bindtap="phonecall">
-          <image src="{{uploadpath}}resource/{{res.kefubangzhu}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.kefubangzhu}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">联系客服</view>
         </view>
 
@@ -153,11 +153,11 @@
       <view class="height-60"></view>
       <view class="flex-row flex-center">
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/feedback/feedback">
-          <image src="{{uploadpath}}resource/{{res.feedback}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.feedback}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">意见反馈</view>
         </view>
         <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/aboutus/aboutus">
-          <image src="{{uploadpath}}resource/{{res.aboutus}}" class="icon"></image>
+          <image src="{{uploadpath}}resource/{{res.aboutus}}" class="icon-25"></image>
           <view class="h7 txt-66 margin-top-20">关于我们</view>
         </view>
         <button style="border: 0;padding: 0;margin: 0;" class="flex-1 flex-row flex-column" bindtap="" plain="true">
