--- a/source/pages/my/my.wxss
+++ b/source/pages/my/my.wxss
@@ -81,7 +81,7 @@
 .orderbox {
     margin: 15rpx 30rpx;
     background: white;
-    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    /* box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18); */
     border-radius: 20rpx;
     padding: 24rpx 0 42rpx;
     
@@ -90,7 +90,7 @@
 .lipin {
     margin: 15rpx 30rpx;
     background: white;
-    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    /* box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18); */
     border-radius: 12rpx;
     padding: 38rpx 0 38rpx 28rpx;
     position: relative;
@@ -106,7 +106,7 @@
    margin: 0 10rpx 15rpx 28rpx;
    padding: 28rpx 28rpx;
     background: white;
-    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    /* box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18); */
     border-radius: 12rpx;
     position: relative;
     
@@ -122,7 +122,7 @@
     margin: 0 30rpx 15rpx 10rpx;
     padding: 28rpx 28rpx;
     background: white;
-    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    /* box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18); */
     border-radius: 12rpx;
     position: relative;
 }
@@ -143,7 +143,7 @@
     margin: 15rpx 30rpx;
     padding: 28rpx;
     background: white;
-    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    /* box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18); */
     border-radius: 20rpx;
 }
 
