--- a/source/pages/orderdetail/orderdetail.wxss
+++ b/source/pages/orderdetail/orderdetail.wxss
@@ -31,7 +31,7 @@ page{
     padding: 20rpx 16rpx 20rpx 24rpx;
     background: #fafafa;
     border-radius: 12rpx;
-    margin-bottom: 10px;
+    margin-bottom: 10rpx;
 }
 .goods {
     margin:0px 24rpx;
@@ -58,7 +58,7 @@ page{
 .total {
     margin: 0 24rpx;
     background-color: #fafafa;
-    padding: 10rpx;
+    padding: 30rpx 20rpx ;
     margin-bottom: 30rpx;
     border-radius: 10rpx;
 }
