--- a/source/pages/shouyitixian/shouyitixian.wxss
+++ b/source/pages/shouyitixian/shouyitixian.wxss
@@ -20,8 +20,9 @@
 .but {
     width: 644rpx;
     height: 92rpx;
+    line-height: 92rpx;
     /* background: #44B549; */
-    box-shadow: 0px 4px 16px 0px rgba(68, 181, 73, 0.5);
+    /* box-shadow: 0px 4px 16px 0px rgba(68, 181, 73, 0.5); */
     border-radius: 48rpx;
     color: #FFFFFF;
 }
