--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -190,3 +190,8 @@
 
     </view>
 </view>
+
+<button wx:if="{{memberinfo==null}}" open-type="getUserInfo" class="shouquanbutton" bindtap="bindgetUserProfile">
+</button>
+<button open-type="getPhoneNumber" class="shouquanbutton1 " hover-class="none" wx:if="{{ memberinfo==null || (memberinfo!=null && memberinfo.mobile=='')}}" bindgetphonenumber="getPhoneNo">
+</button>
