--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
@@ -43,3 +43,6 @@
     <view class="line-height-90 butcolor">确认支付{{cardprice[priceindex].buyprice}}</view>
   </view>
 </view>
+
+<button open-type="getPhoneNumber" class="shouquanbutton1 " hover-class="none" wx:if="{{ memberinfo==null || (memberinfo!=null && memberinfo.mobile=='')}}" bindgetphonenumber="getPhoneNo">
+</button>
