--- a/source/pages/activity/activity.wxss
+++ b/source/pages/activity/activity.wxss
@@ -66,3 +66,17 @@ button::after{
 .content{
     width: 700rpx !important;
 }
+.shouquanbutton{
+  position: absolute;
+  width: 100%;
+  height: 180rpx;
+  bottom: 0;
+  z-index: 10;
+}
+.shouquanbutton1{
+  position: absolute;
+  width: 100%;
+  height: 180rpx;
+  bottom: 0;
+  z-index: 5;
+}
