--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxss
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxss
@@ -29,3 +29,15 @@
 .border_green {
     border: 2rpx solid rgba(68, 181, 73, 1);
 }
+.shouquanbutton1::after {
+  border: 0;
+}
+.shouquanbutton1{
+  position: absolute;
+  width: 100%;
+  height: 180rpx;
+  bottom: 0;
+  z-index: 10;
+  border: none;
+  /* border: 1rpx solid red; */
+}
