--- a/source/pages/giftcards/giftcards.wxss
+++ b/source/pages/giftcards/giftcards.wxss
@@ -68,3 +68,27 @@
     bottom: 10rpx;
     /* bottom: 20rpx; */
 }
+.shouquanbutton{
+  position: absolute;
+  width: 100%;
+  height: 180rpx;
+  bottom: 0;
+  z-index: 20;
+  border: none;
+  /* border: 1rpx solid red; */
+}
+.shouquanbutton::after {
+  border: 0;
+}
+.shouquanbutton1::after {
+  border: 0;
+}
+.shouquanbutton1{
+  position: absolute;
+  width: 100%;
+  height: 180rpx;
+  bottom: 0;
+  z-index: 10;
+  border: none;
+  /* border: 1rpx solid red; */
+}
