--- a/source/pages/my/my.wxml
+++ b/source/pages/my/my.wxml
@@ -174,3 +174,9 @@
   </view>
 
 </scroll-view>
+
+
+<button wx:if="{{memberinfo==null||(memberinfo!=null && memberinfo.avatarUrl=='')}}"  hover-class="none" open-type="getUserInfo" class="shouquanbutton" bindtap="bindgetUserProfile">
+</button>
+<button open-type="getPhoneNumber" class="shouquanbutton1 " hover-class="none" wx:if="{{ memberinfo==null || (memberinfo!=null && memberinfo.mobile=='')}}" bindgetphonenumber="getPhoneNo">
+</button>
