--- a/source/pages/home/home.wxml
+++ b/source/pages/home/home.wxml
@@ -13,21 +13,21 @@
         <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" bindtap="shipingkaiguan" id='/pages/videolist/videolist' class="videobox"></image>
       </view>
       <view class="margin-top-10">
-        <view class="rightbox" bindtap="navigateto" id='/pages/giftcards/giftcards'>
+        <view class="rightbox" bindtap="navigateto" id='/pages/giftcards/giftcards' style="background-image: url('{{uploadpath}}resource/{{res.timian}}'); background-repeat: no-repeat; background-size: 100% 100%;">
           <view class="height-40"></view>
           <view class="margin-left-28">
             <view class="txt-bold">礼品卡下单</view>
             <view class="h6 txt-33">新鲜日期工厂直发</view>
           </view>
-          <image src="{{uploadpath}}resource/{{res.timian}}" class="timian"></image>
+          <!-- <image src="{{uploadpath}}resource/{{res.timian}}" class="timian"></image> -->
         </view>
-        <view class="rightbox margin-top-6" bindtap="navigateto" id='/pages/buygiftcards/buygiftcards'>
+        <view class="rightbox margin-top-6" bindtap="navigateto" id='/pages/buygiftcards/buygiftcards' style="background-image: url('{{uploadpath}}resource/{{res.lipinka}}'); background-repeat: no-repeat; background-size: 100% 100%;">
           <view class="height-40"></view>
           <view class="margin-left-28">
             <view class="txt-bold">购礼品卡</view>
             <view class="h6 txt-33">面传情 心意礼</view>
           </view>
-          <image src="{{uploadpath}}resource/{{res.lipinka}}" class="lipinka"></image>
+          <!-- <image src="{{uploadpath}}resource/{{res.lipinka}}" class="lipinka"></image> -->
         </view>
       </view>
     </view>
